# Sylva

./: .clang-format  .clang-tidy  .gitignore  AUDIT.md  CLAUDE.md  CMakeLists.txt  CameraDebug.md  Plan.md  README.md  config.ini  refactor.md  vcpkg.json
.github/workflows/: lint.yml
assets/: default_config.ini
assets/audio/: README.md
assets/shaders/: basic.vert  colored.frag  colored.vert  debug.frag  debug.vert  terrain_fragment.glsl  terrain_vertex.glsl  textured.frag  textured.vert  ui.vert  voxel.frag  voxel.vert
config/: default_config.ini
src/: engine.cpp  engine.h  main.cpp  system_manager.cpp  system_manager.h
src/audio/: audio_system.cpp  audio_system.h
src/core/: Config.cpp  Config.h  Core.cpp  Core.h  Logger.cpp  Logger.h  types.h
src/input/: InputManager.cpp  InputManager.h
src/platform/: Platform.cpp  Platform.h  input.cpp  input.h  window.cpp  window.h
src/renderer/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraDebug.cpp  CameraDebug.h  DebugDrawing.cpp  DebugDrawing.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  frustum.cpp  frustum.h  ui.cpp  ui.h
src/world/: Player.cpp  Player.h  Terrain.cpp  Terrain.h  World.cpp  World.h  block.cpp  block.h  character_model.cpp  character_model.h  chunk.cpp  chunk.h  chunk_job_system.cpp  chunk_job_system.h  terrain_generator.cpp  terrain_generator.h  voxel_world.cpp  voxel_world.h  voxel_world_generation.cpp  voxel_world_generation.h  voxel_world_physics.cpp  voxel_world_physics.h  voxel_world_rendering.cpp  voxel_world_rendering.h
src/world/chunk/: chunk.cpp  chunk.h
src/world/generation/: biome_generator.cpp  biome_generator.h  feature_generator.cpp  feature_generator.h  terrain_generator.cpp  terrain_generator.h
